--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "work.ua",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://magdich-alex.github.io/especially-for-work.ua",
   "dependencies": {
     "@tanstack/react-query": "^4.29.19",
     "@testing-library/jest-dom": "^5.16.5",
@@ -11,6 +12,7 @@
     "@types/node": "^16.18.37",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -18,6 +20,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
